# dylib_demo

./: Cargo.toml  build.sh  build_all.sh  build_api.sh  build_host.sh  build_plugin.sh  readme.md
api/: Cargo.toml
api/src/: lib.rs
common/src/: lib.rs
host/: Cargo.toml  build.rs
host/src/: main.rs
plugin/: Cargo.toml
plugin/src/: lib.rs
