[workspace]
members = ["host", "api", "plugin"]
# excluding everything so that rust-analyzer doesn't do its own building,
# bypassing the very specific build instructions we need
exclude = ["host", "api", "plugin"]
resolver = "3"

[workspace.dependencies]
libloading = "0.9"
rootcause = "0.13"
host = { version = "0.1", path = "host" }
api = { version = "0.1", path = "api" }
plugin = { version = "0.1", path = "plugin" }
